# rose-offline-files

./: .gitignore  .kilocodeignore  Cargo.toml  README.md  bevy-0.13-to-0.14-migration-guide.md  bevy-0.14-to-0.15-migration-guide.md  bevy-0.15-to-0.16-migration-guide.md  bevy-0.16-to-0.17-migration-guide.md  bevy-0.17-to-0.18-migration-guide.md  build_errors.txt  build_output.txt  pitfalls.md
.kilocode/rules/: rules.md
docs/: llm-buddy-bot-api-design.md  llm-buddy-bot-guide.md  llm-feedback-system-architecture.md
libs/big-brain/: Cargo.toml
plans/: bot-expansion-issue.md  llm-bot-feedback-loop-plan.md
rose-data-irose/src/: character_motion_database.rs  client_strings.rs  item_database.rs  job_class_database.rs  npc_database.rs  quest_database.rs  skill_database.rs  status_effect_database.rs  zone_database.rs
rose-data/src/: client_strings.rs  effect_database.rs  item_database.rs  job_class_database.rs  npc_database.rs  quest_database.rs  skill_database.rs  status_effect_database.rs  zone_database.rs  zone_list.rs
rose-file-readers/src/: aruavfs.rs  irosephvfs.rs  lib.rs  qsd.rs  reader.rs  stl.rs  titanvfs.rs  zsc.rs
rose-mcp-server/: Cargo.toml
rose-mcp-server/src/: api_client.rs  config.rs  lib.rs  main.rs  schemas.rs
rose-mcp-server/src/tools/: bot_management.rs  chat.rs  combat.rs  information.rs  mod.rs  movement.rs
rose-network-common/src/: connection.rs
rose-network-irose/src/: game_server_packets.rs  packet_codec.rs  world_server_packets.rs
rose-offline-server/: Cargo.toml
rose-offline-server/src/: main.rs
(+135 files in other folders)
